syntax = "proto3";
package repo;
option go_package = "github.com/Syncano/codebox/pkg/filerepo/proto";

service Repo {
  // Exists checks if file was defined in file repo.
  rpc Exists (ExistsRequest) returns (ExistsResponse);

  // Upload streams file(s) to server.
  rpc Upload (stream UploadRequest) returns (stream UploadResponse);
}

message ExistsRequest {
  string key = 1;
}

message ExistsResponse {
  bool ok = 1;
}

message UploadRequest {
  message MetaMessage {
    string key = 1;
  }
  message ChunkMessage {
    string name = 1;
    bytes data = 2;
  }

  oneof value {
    MetaMessage meta = 1;
    ChunkMessage chunk = 2;
    bool done = 3;
  }
}

message UploadResponse {
  bool accepted = 1;
}
